--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               </br>
               4. Nama : Rizki Alfarizi</br>
               NPM : 2015061027 </br>
-              Link : </br>
+              Link : klik disini > <a href="index_Rizki.html">Website personal saya</a></br>
             </br>
             </p>
             <a href="#" class="btn">Selanjutnya</a>
