--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="swiper-container slider-1">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="./images/pic-1.jpg" alt="" />
+            <img src="./images/bali2.jpg" alt="" />
           </div>
 
           <div class="swiper-slide">
@@ -85,7 +85,7 @@
             </video>
           </div>
           <div class="swiper-slide">
-            <img src="./images/hero-3.jpg" alt="" />
+            <img src="./images/bukit.jpg" alt="" />
           </div>
 
           <div class="swiper-slide">
