--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="swiper-container slider-1">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="./images/bali2.jpg" alt="" />
+            <img src="./images/pic-1.jpg" alt="" />
           </div>
 
           <div class="swiper-slide">
@@ -85,7 +85,7 @@
             </video>
           </div>
           <div class="swiper-slide">
-            <img src="./images/bukit.jpg" alt="" />
+            <img src="./images/hero-3.jpg" alt="" />
           </div>
 
           <div class="swiper-slide">
@@ -133,7 +133,7 @@
                Link : </br>
               </br>
               3. Nama : RifqiZakia Rozan </br>
-               NPM : 2015061 </br>
+               NPM : 2015061058 </br>
                Link : </br>
               </br>
               4. Nama : Rizki Alfarizi</br>
@@ -153,7 +153,7 @@
                     <img src="./images/Albi.jpeg" alt="" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="./images/pic-1.jpg" alt="" />
+                  <img src="./images/rifqi.jpg" alt="" />
                 </div>
                 <div class="swiper-slide">
                   <img src="./images/rizki.jpeg" alt="" />
