--- a/index_Rizki.html
+++ b/index_Rizki.html
@@ -386,7 +386,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Khalid Surya Gusti</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">Khalid Surya Gusti</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Rizki Alfarizi</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">Rizki Alfarizi</a>
             </p>
         </div>
     </div>
