--- a/index1.html
+++ b/index1.html
@@ -139,10 +139,10 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">Tugas 3</h6>
-                            <h6 class="font-weight-bold">0%</h6>
+                            <h6 class="font-weight-bold">selesai</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -235,6 +235,7 @@
         </div>
     </div>
     <!-- Qualification End -->
+
     <!-- Qualification Start -->
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
@@ -287,8 +288,115 @@
     </div>
     <!-- Qualification End -->
 
-
-  
+    <!-- Qualification Start -->
+    <div class="container-fluid py-5" id="qualification">
+        <div class="container">
+            <div class="position-relative d-flex align-items-center justify-content-center">
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Tugas 3</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Tugas 3</h1>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h3 class="mb-4">Tugas 3</h3>
+                    <div class="border-left border-primary pt-2 pl-4 ml-2">
+                        <div class="position-relative ex-me mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+                            <h5 class="font-weight-bold mb-1">Sebutkan dan jelaskan beberapa conoth perangkat keras yang mengimplementasikan model jaringan syaraf tiruan!</h5>
+                            <p>a. Aerospace
+                                Autopilot pesawat terbang, simulasi jalur penerbangan,
+                                sistem kendali pesawat, perbaikan autopilot dan simulasi
+                                kompponen pesawat.</br>
+                                b. Otomotif</br>
+                                Sistem kendali otomatis mobil</br>
+                                c. Keuangan dan perbankan</br>
+                                Pendekatan uang palsu, evaluator aplikasi kredit,
+                                pengidentifikasian pola-pola data pasar saham.</br>
+                                d. Pertahanan (militer)</br>
+                                Pengendali senjata, pendeteksi bom, penelusuran target,
+                                pembedaan objek, pengendali sensor, sonar, radar, dan
+                                pengolahan sinyal citra yang meliputi kompresi data,
+                                ekstraksi bagian istimewa dan penghilangan derau,
+                                pengenalan sinyal atau citra.</br>
+                                e. Elektronik</br>
+                                Pembuatan perangkat keras yang bisa mengimplementasikan
+                                jaringan syaraf tiruan secara efisien (pendesainan VLSI),
+                                machine vision, pengontrol gerakan dan penglihatan robot,
+                                sintesis suara.</br>
+                                f. Broadcast</br>
+                                Pencarian klip berita melalui pengenalan wajah.</br>
+                                g. Keamanan</br>
+                                Jaringan syaraf tiruan digunakan untuk mengenali mobil dan
+                                mengenali wajah oknum</br>
+                                h. Medis</br>
+                                Analisis sel kanker payudara, pendeteksi kanker kulit</br>
+                            
+                            </p>
+                        </div>
+                        <div class="position-relative ex-me mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
+                            <h5 class="font-weight-bold mb-1">Hal apa saja yang perlu diperhatikan dalam pemilihan paradigma?   </h5>
+                            <p>a) Ukuran jaringan</br>
+                                Pada saat mendesain jaringan
+                                saraf tiruan, kebutuhan node dan
+                                lapisan dapat diperkirakan. Untuk
+                                jaringan berukuran besar maka
+                                tentunya tidak mungkin
+                                menggunakan metode
+                                pembelajaran yang hanya
+                                mampu menampung jaringan
+                                kecil.</br>
+                                b) Pembawaan input dan output</br>
+                                Pembawaan input dan output,
+                                misalnya matriks angka cocok 
+                                untuk optimisasi, diskrit cocok
+                                untuk klasifikasi dan pengenalan
+                                pola.</br>
+                                c) Mekanisme memori</br>
+                                Ada 2 macam mekanisme
+                                memori :
+                                • Memori autoasosiatif
+                                Mengambil informasi secara
+                                parsial yang kemudian
+                                digunakan untuk merekonstruksi
+                                pola-pola yang sudah tersimpan
+                                sebelumnya
+                                • Memori heteroasosiatif
+                                Sebuah jaringan saraf tiruan
+                                yang didesain menghubungkan
+                                pasangan pola input dengan
+                                pola output</br>
+                                d) Tipe pelatihan : terawasi dan
+                                tidak terawasi </br>
+                                e) Batasan waktu operasi rutin dari
+                                sistem berjalan</br>
+                                Batasan waktu berbeda-beda
+                                tergantung dari model dan 
+                                ukuran jaringan serta kualitas</br>
+data. </p>
+                        </div>
+                        <div class="position-relative ex-me mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
+                            <h5 class="font-weight-bold mb-1">Sebutkann 3 aspek deklaratif dalam verifikasi jaringan syaraf tiruan?</h5>
+                            <p>J1. Jaringan</br>
+                                a) Apakah arsitektur neural network berbentuk lapisan tunggal atau 
+                                multilapis ?</br>
+                                b) Apakah aliran informasi jaringan adalah umpan maju atau berulang?</br>
+                                c) Apakah pola terhubung penuh atau sebagian?</br>
+                                2. Unit</br>
+                                a) Bagaimana koneksi inputnya?</br>
+                                b) Bagaimana koneksi outputnya?</br>
+                                c) Mengenai non linier itu apakah hard limit atau sigmoid atau tangen 
+                                hiperbola?</br>
+                                3. Perilaku</br>
+                                a) Bagaimana inisialisasi bobotnya?</br>
+                                b) Bagaimana perhitungan aktivasinya?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Qualification End -->
 
     <!-- Testimonial Start -->
     <div class="container-fluid py-5" id="testimonial">
