--- a/index.html
+++ b/index.html
@@ -169,6 +169,20 @@
           </div>
         </div>
       </section>
+
+      <!--  Service Section -->
+      <section class="section service" id="service">
+        <div class="row container">
+          <div class="col">
+            <div class="title">
+              <h1>Tugas Algoritma Genetika</h1>
+            </div>
+         <embed type="application/PDF" src="dokumen/KECERDASAN BUATAN2.pdf" height="1000" width="1100"></embed>
+          </div>
+        </div>
+      </section>
+       <!--  Service Section -->
+
       <!-- About Section -->
       <section class="section about" id="about">
         <div class="row container">
