--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             </br>
             2. Nama : M. Nawwir Albi </br>
                NPM  : 2015061081 </br>
-               Link : </br>
+               Link : klik disini > <a href="index_nawir.html">Website personal saya</a></br>
               </br>
               3. Nama : Rifqi Zakia Rozan </br>
                NPM : 2015061058 </br>
-               Link : </br>
+               Link : klik disini > <a href="index_rifqi.html">Website personal saya</a></br>
               </br>
               4. Nama : Rizki Alfarizi</br>
               NPM : 2015061027 </br>
@@ -169,6 +169,32 @@
           </div>
         </div>
       </section>
+
+      <!--  Service Section -->
+      <section class="section service" id="service">
+        <div class="row container">
+          <div class="col">
+            <div class="title">
+              <h1>Tugas Latihan Buku Rika Rosnelly</h1>
+            </div>
+         <embed type="application/PDF" src="dokumen/tugas2.pdf" height="1000" width="1100"></embed>
+          </div>
+        </div>
+      </section>
+       <!--  Service Section -->
+
+       <!--  Service Section -->
+      <section class="section service" id="service">
+        <div class="row container">
+          <div class="col">
+            <div class="title">
+              <h1>Referensi Sistem Pakar Di Bidang Pendidikan</h1>
+            </div>
+         <embed type="application/PDF" src="dokumen/referensi.pdf" height="1000" width="1100"></embed>
+          </div>
+        </div>
+      </section>
+       <!--  Service Section -->
 
       <!--  Service Section -->
       <section class="section service" id="service">
