--- a/index.html
+++ b/index.html
@@ -127,18 +127,22 @@
               1. Nama : Khalid Surya Gusti </br>
                  NPM  : 2015061045 </br>
                  Link : klik disini > <a href="index1.html">Website personal saya</a></br>
+                 Peran: Ketua Kelompok ,Web Master 1</br>
             </br>
             2. Nama : M. Nawwir Albi </br>
                NPM  : 2015061081 </br>
                Link : klik disini > <a href="index_nawir.html">Website personal saya</a></br>
+               Peran: Anggota</br>
               </br>
               3. Nama : Rifqi Zakia Rozan </br>
                NPM : 2015061058 </br>
                Link : klik disini > <a href="index_rifqi.html">Website personal saya</a></br>
+               Peran: Anggota</br>
               </br>
               4. Nama : Rizki Alfarizi</br>
               NPM : 2015061027 </br>
               Link : klik disini > <a href="index_Rizki.html">Website personal saya</a></br>
+              Peran: Web Master 2</br>
             </br>
             </p>
             <a href="#" class="btn">Selanjutnya</a>
@@ -204,6 +208,19 @@
               <h1>Tugas Algoritma Genetika</h1>
             </div>
          <embed type="application/PDF" src="dokumen/KECERDASAN BUATAN2.pdf" height="1000" width="1100"></embed>
+          </div>
+        </div>
+      </section>
+       <!--  Service Section -->
+
+       <!--  Service Section -->
+      <section class="section service" id="service">
+        <div class="row container">
+          <div class="col">
+            <div class="title">
+              <h1>Project Kelompok Smart Grid Industrial</h1>
+            </div>
+         <embed type="application/PDF" src="dokumen/SmartGrid.pdf" height="1000" width="1100"></embed>
           </div>
         </div>
       </section>
