--- a/index.html
+++ b/index.html
@@ -114,118 +114,7 @@
         </div>
       </div>
     </header>
-
-    <main class="main">
-      <!-- About Section -->
-      <section class="section about" id="about">
-        <div class="row container">
-          <div class="col">
-            <div class="title">
-              <h1>Anggota Kelompok</h1>
-            </div>
-            <p>
-              1. Nama : Khalid Surya Gusti </br>
-                 NPM  : 2015061045 </br>
-                 Link : klik disini > <a href="index1.html">Website personal saya</a></br>
-                 Peran: Ketua Kelompok ,Web Master 1</br>
-            </br>
-            2. Nama : M. Nawwir Albi </br>
-               NPM  : 2015061081 </br>
-               Link : klik disini > <a href="index_nawir.html">Website personal saya</a></br>
-               Peran: Anggota</br>
-              </br>
-              3. Nama : Rifqi Zakia Rozan </br>
-               NPM : 2015061058 </br>
-               Link : klik disini > <a href="index_rifqi.html">Website personal saya</a></br>
-               Peran: Anggota</br>
-              </br>
-              4. Nama : Rizki Alfarizi</br>
-              NPM : 2015061027 </br>
-              Link : klik disini > <a href="index_Rizki.html">Website personal saya</a></br>
-              Peran: Web Master 2</br>
-            </br>
-            </p>
-            <a href="#" class="btn">Selanjutnya</a>
-          </div>
-          <div class="col">
-            <div class="swiper-container slider-2">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="./images/IMG-20200627-WA0057.jpg" alt="hero image" />
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/Albi.jpeg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="./images/rifqi.jpg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="./images/rizki.jpeg" alt="" />
-                </div>
-              </div>
-              <div class="swiper-button-next">
-                <i class="bx bx-chevron-right swiper-icon"></i>
-              </div>
-              <div class="swiper-button-prev">
-                <i class="bx bx-chevron-left swiper-icon"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!--  Service Section -->
-      <section class="section service" id="service">
-        <div class="row container">
-          <div class="col">
-            <div class="title">
-              <h1>Tugas Latihan Buku Rika Rosnelly</h1>
-            </div>
-         <embed type="application/PDF" src="dokumen/tugas2.pdf" height="1000" width="1100"></embed>
-          </div>
-        </div>
-      </section>
-       <!--  Service Section -->
-
-       <!--  Service Section -->
-      <section class="section service" id="service">
-        <div class="row container">
-          <div class="col">
-            <div class="title">
-              <h1>Referensi Sistem Pakar Di Bidang Pendidikan</h1>
-            </div>
-         <embed type="application/PDF" src="dokumen/referensi.pdf" height="1000" width="1100"></embed>
-          </div>
-        </div>
-      </section>
-       <!--  Service Section -->
-
-      <!--  Service Section -->
-      <section class="section service" id="service">
-        <div class="row container">
-          <div class="col">
-            <div class="title">
-              <h1>Tugas Algoritma Genetika</h1>
-            </div>
-         <embed type="application/PDF" src="dokumen/KECERDASAN BUATAN2.pdf" height="1000" width="1100"></embed>
-          </div>
-        </div>
-      </section>
-       <!--  Service Section -->
-
-       <!--  Service Section -->
-      <section class="section service" id="service">
-        <div class="row container">
-          <div class="col">
-            <div class="title">
-              <h1>Project Kelompok Smart Grid Industrial</h1>
-            </div>
-         <embed type="application/PDF" src="dokumen/SmartGrid.pdf" height="1000" width="1100"></embed>
-          </div>
-        </div>
-      </section>
-       <!--  Service Section -->
-
+    
       <!-- About Section -->
       <section class="section about" id="about">
         <div class="row container">
@@ -243,7 +132,7 @@
             <div class="swiper-container slider-2">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="./images/pic-5 (2).jpg" alt="hero image" />
+                  <img src="./images/pic-52).jpg" alt="hero image" />
                 </div>
                 <div class="swiper-slide">
                   <video muted loop autoplay>
