--- a/index.html
+++ b/index.html
@@ -380,31 +380,13 @@
     <footer class="footer">
       <div class="row container">
         <div class="col">
-          <h3>Company</h3>
-          <a href="#">Contact Us</a>
-          <a href="#">Executive Team</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Executive Team</a>
-          <a href="#">Contact Us</a>
+          <h3>My Contact</h3>
+          <a href="#">Handphone</a>
+          <a href="#">Email</a>
+          <a href="#">Instagram</a>
+          <a href="#">Linkedin</a>
         </div>
         <div class="col">
-          <h3>Learning Center</h3>
-
-          <a href="#">Contact Us</a>
-          <a href="#">Executive Team</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Executive Team</a>
-          <a href="#">Contact Us</a>
-        </div>
-        <div class="col">
-          <h3>Partner With Us</h3>
-
-          <a href="#">Contact Us</a>
-          <a href="#">Executive Team</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Executive Team</a>
-          <a href="#">Contact Us</a>
-        </div>
         <div class="col">
           <img src="./images/lolsa.jpg" alt="" />
           <img src="./images/smart-grid.jpeg" alt="" />
